vars in ax conf

--- a/ax25d.conf
+++ b/ax25d.conf
@@ -4,7 +4,15 @@
 #
 # AX.25 Ports begin with a '['.
 #
-[KM6TIG-1 VIA ondadig1]
+
+# Grab ip address of wireless to set ax port
+termip=$(/sbin/ifconfig wlan0 | grep 'inet' | cut -d: -f2 | awk '{print $2}' | cut -d'.' -f 4)
+axip="172.1.1.$termip"
+
+#set which ax port
+axpt="ondadig$termip"
+
+[KM6TIG-1 VIA "$axpt"]
 NOCALL * * * * * * L
 default * * * * * * - zuluadmin /dev/ttyUSB0 ttyUSB0
 [KM6TIG-2 VIA ondadup1]
