trying diff vars in conf

--- a/ax25d.conf
+++ b/ax25d.conf
@@ -6,13 +6,13 @@
 #
 
 # Grab ip address of wireless to set ax port
-termip=$(/sbin/ifconfig wlan0 | grep 'inet' | cut -d: -f2 | awk '{print $2}' | cut -d'.' -f 4)
-axip="172.1.1.$termip"
+t=$(/sbin/ifconfig wlan0 | grep 'inet' | cut -d: -f2 | awk '{print $2}' | cut -d'.' -f 4)
+a="172.1.1.$termip"
 
 #set which ax port
-axpt="ondadig$termip"
+a="ondadig$t"
 
-[KM6TIG-1 VIA "$axpt"]
+[KM6TIG-1 VIA "$a"]
 NOCALL * * * * * * L
 default * * * * * * - zuluadmin /dev/ttyUSB0 ttyUSB0
 [KM6TIG-2 VIA ondadup1]
